# api-benchmarks

./: .env  .gitignore  .prettierrc  README.md  benchmark_data.js  dashboard.html  justfile
.devcontainer/: Dockerfile  docker-compose.yml
database/queries/: is_admin.sql
database/queries/auth/: login.sql  me.sql
database/queries/comments/: create.sql  list.sql
database/queries/likes/: create.sql  delete.sql  exists.sql
database/queries/posts/: create.sql  delete.sql  get.sql  get_author.sql  list.sql
database/queries/users/: create.sql  delete.sql  get.sql  list.sql  update.sql
scripts/: generate_dashboard_data.py  postgres_connection_manager.mjs
scripts/k6/: benchmark_runner.mjs  throughput_test.js  workflow.js
src/go-fiber/: .gitignore  go.mod  go.sum  main.go
src/js-effect/: README.md  package.json
src/js-effect/src/: api.ts  application.ts  auth.ts  domain.ts  errors.ts  kysely.ts  kysely_schema.ts  main-node.ts  main.ts  password.ts  postgres.ts  sql.ts
src/js-express/: integration.test.mjs
src/js-express/src/: main-bun-native-pg.js
src/python-fastapi/: README.md  pyproject.toml  start_server.py  start_server_granian.py
src/python-fastapi/src/: main.py  models.py  sql.py  utils.py
src/rust-axum/: Cargo.toml  README.md
src/rust-axum/src/: auth.rs  error.rs  handlers.rs  main.rs  models.rs  sql.rs
